# lyric-overlay

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  start.bat  vcpkg.json
.github/workflows/: ci.yml
src/: base64.cpp  lyrics.cpp  lyrics.hpp  lyrics_api.cpp  lyrics_api.hpp  main.cpp  random.cpp  random.hpp  spotify_api.cpp  spotify_api.hpp
src/include/: json.hpp
